# app4triqs

./: CMakeLists.txt
c++/: CMakeLists.txt  arithmetic.cpp  arithmetic.hpp
c++/app4triqs/: CMakeLists.txt  arithmetic.cpp  arithmetic.hpp
c++/bench/: CMakeLists.txt  G2_MM_recomb_bench.cpp  G2_MM_recomb_eigen.cpp  arithmetic_bench.cpp
python/: CMakeLists.txt  __init__.py  arithmetic_desc.py
python/triqs_app4triqs/: CMakeLists.txt  __init__.py  arithmetic_desc.py
test/c++/: CMakeLists.txt  arithmetic.cpp  arithmetic_test.cpp
test/python/: CMakeLists.txt  arithmetic.py
